--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/assets/css/styles.css">
+<link rel="stylesheet" href="{{ 'assets/css/styles.css' | relative_url }}">
 
 <link rel="icon" href="{{ site.baseurl }}/assets/favicon/cropped-bookshiplogo_card-3-192x192.png" sizes="192x192"/>
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/favicon/cropped-bookshiplogo_card-3-180x180.png"/>
